new changes added- fonts changed

--- a/templates/database.html
+++ b/templates/database.html
@@ -1,66 +1,2 @@
-{% extends "layout.html" %} {% block layout-body %} {% comment %}
-<div id="newSearchPlace"></div>
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Enter Name</label>
-  <input
-    type="text"
-    class="form-control"
-    id="exampleFormControlInput1"
-    placeholder="Enter Name"
-  />
-</div>
-{% endcomment %}
-
-<div class="row">
-    <div class="col-md-4 mb-3 ">
-        <label for="exampleFormControlInput1" class="form-label">Enter Name</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleFormControlInput1"
-          placeholder="Enter Name"
-        />
-      </div>
-      
-      <div  class="col-md-4 mb-3 ">
-        <label for="exampleFormControlInput1" class="form-label">Enter Organism</label
-        ><select class="form-select" id="inputGroupSelect01">
-          <option selected="">Choose...</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-      </div>
-      
-      <div  class="col-md-4 mb-3 ">
-        <label for="exampleFormControlInput1" class="form-label">Select Domain</label
-        ><select class="form-select" id="inputGroupSelect01">
-          <option selected="">Choose...</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-      </div>
-</div>
-
-<table id="myTable" class="display">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Last Name</th>
-      <th>Age</th>
-      <th>Address</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for item in data %}
-    <tr>
-      <td>{{ item.name }}</td>
-      <td>{{ item.last_name }}</td>
-      <td>{{ item.age }}</td>
-      <td>{{ item.address }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+{% extends "layout.html" %} {% block layout-body %} 
 {% endblock layout-body %}
