--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
               class="btn btn-success btn-lg px-4 gap-3 login-buttton"
               data-toggle="modal"
               data-target="#myModal"
+              style={font-family:'Roboto'}
             >
               Access The Tool
             </button>
