--- a/static/home.css
+++ b/static/home.css
@@ -12,6 +12,12 @@
   } 
   */
 
+  @font-face {
+    font-family: 'Arca Majora 3 Heavy';
+    src: local('Arca Majora 3 Heavy'), url('./fonts/ArcaMajora3-Bold.woff') format('woff');
+    /* Add additional formats if needed (e.g., 'ttf', 'otf') */
+}
+
   .custom-header {
     background-color: #FFFFFF; /* Set your desired background color */
     /* color: #ffffff; Set your desired text color */
@@ -27,12 +33,14 @@
    text-align: center;
     color: #309201;
     margin-top: 15px;
+
+    
     
     h5 {
        font-size: 24px;
        line-height: 24px;
        font-weight: 700; 
-       /* font-family: 'Arca Majora 3 Heavy', sans-serif; Apply the custom font */
+       font-family: 'Arca Majora 3 Heavy' 
     }
   }
 
@@ -41,7 +49,7 @@
     height: 416px;
     background: #F9F1EA;
     margin: auto; /* Center the card horizontally */
-    margin-top: 50px; /* Add top margin as needed */
+    margin-top: 150px !important; /* Add top margin as needed */
     /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); Add drop shadow */
     padding: 20px; /* Adjust padding as needed */
     border-radius: 10px;
@@ -52,6 +60,7 @@
     font-size: 32px;
     font-weight: 700;
     line-height: 32px;
+    font-family: 'Arca Majora 3 Heavy'
   }
 
   .title-2{
@@ -59,10 +68,12 @@
     font-size: 24px;
     font-weight: 700px;
     line-height: 24px;
+    font-family: 'Arca Majora 3 Heavy'
   }
   .login-buttton{
     background: #309201;
     border-radius: 20px;
+    font-family: 'Roboto';
   }
   
 
