--- a/templates/header.html
+++ b/templates/header.html
@@ -12,13 +12,19 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'home.css' %}" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Arca+Majora+3+Heavy&display=swap">
+
     <link
       href="https://fonts.cdnfonts.com/css/arca-majora-3"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    
 
   </head>
   <body>
