--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,12 @@
           "
         >
           <button type="button" class="close" data-dismiss="modal">
-            &times;
+           <img
+           src="/static/images/10728089.png"
+           alt="Logo"
+           width="25"
+           height="25"
+           class="d-inline-block align-text-top"/>
           </button>
         </div>
 
@@ -49,26 +54,27 @@
         <div class="modal-body">
           <div class="px-4 my-3 text-center">
             <h5 class="title-3">Enter Your Access Code</h5>
-            <div class="col-lg-8 mx-auto">
-              <div class="input-group mt-3 mb-5">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Enter Code"
-                  aria-label="Enter Code"
-                  aria-describedby="basic-addon1"
-                />
-              </div>
-              <div
-                class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-6"
+            
+          </div>
+          <div class="col-lg-10 mx-auto">
+            <div class="input-group mt-4 mb-5 input-code">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Enter Code"
+                aria-label="Enter Code"
+                aria-describedby="basic-addon1"
+              />
+            </div>
+            <div
+              class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-6"
+            >
+              <button
+                type="button"
+                class="btn btn-success btn-lg px-4 gap-3 login-buttton"
               >
-                <button
-                  type="button"
-                  class="btn btn-success btn-lg px-4 gap-3 login-buttton"
-                >
-                  Submit
-                </button>
-              </div>
+                SUBMIT
+              </button>
             </div>
           </div>
         </div>
