--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,7 @@
 {% extends "header.html" %} {% block body %}
 
+ 
+
 <div class="row">
     <div class="col-md-2">
         <div
@@ -35,7 +37,7 @@
           </li>
           <hr />
           <li>
-            <a href="#" class="nav-link">
+            <a href="/logout" class="nav-link">
               <svg class="bi pe-none me-2" width="16" height="16">
                 <use xlink:href="#grid"></use>
               </svg>
