--- a/templates/database.html
+++ b/templates/database.html
@@ -1,248 +1,168 @@
-{% extends "layout.html" %} {% block layout-body %}
+{% extends "layout.html" %}
+{% block layout-body %}
 <div class="container-fluid">
-  <!-- Bootstrap row for the header -->
-  <div class="row">
-    <div class="col-lg-4 mt-4">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Enter Name</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-          placeholder="Enter Name"
-        />
-      </div>
-    </div>
-    <div class="col-lg-3 mt-4">
-      <div class="form-group">
-        <label for="exampleFormControlSelect1">Select Organism</label>
-        <select class="form-control" id="exampleFormControlSelect1">
-          <option>E-coli K-12</option>
-          <option>E-coli K-12</option>
-        </select>
-      </div>
-    </div>
-    <div class="col-lg-4 mt-4">
-      <div class="form-group">
-        <label for="exampleFormControlSelect1">Select Domain</label>
-        <select class="form-control" id="exampleFormControlSelect1">
-          <option>Amidase-S (PF053)</option>
-          <option>Amidase-S (PF053)</option>
-        </select>
-      </div>
-    </div>
-    <div class="col-lg-1 mt-5">
-      <button type="button" class="btn btn-light custom-button">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="16"
-          height="16"
-          fill="currentColor"
-          class="bi bi-search custon-icon"
-          viewBox="0 0 16 16"
-        >
-          <path
-            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"
+    <!-- Your input and select fields -->
+    <div class="row">
+      <div class="col-lg-4 mt-4">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Enter Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="exampleInputEmail1"
+            aria-describedby="emailHelp"
+            placeholder="Enter Name"
           />
-        </svg>
-      </button>
+        </div>
+      </div>
+      <div class="col-lg-3 mt-4">
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Select Organism</label>
+          <select class="form-control" id="exampleFormControlSelect1">
+            {% for organism_name in organism_names %}
+        <option>{{ organism_name }}</option>
+        {% endfor %}
+          </select>
+        </div>
+      </div>
+      <div class="col-lg-4 mt-4">
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Select Domain</label>
+          <select class="form-control" id="exampleFormControlSelect1">
+            {% for domain_name in domains_names %}
+        <option>{{ domain_name }}</option>
+        {% endfor %}
+          </select>
+        </div>
+      </div>
+      <div class="col-lg-1 mt-5">
+        <button type="button" class="btn btn-light custom-button">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-search custon-icon"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"
+            />
+          </svg>
+        </button>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-11 mt-4">
-      <table class="table database table">
-        <thead class="table-header">
-          <tr>
-            <th scope="col">
-              <input class="form-check-input" type="checkbox" id="checkbox1" />
-              ID
-            </th>
-            <th scope="col">Name</th>
-            <th scope="col">Organism</th>
-            <th scope="col">Domains</th>
-          </tr>
-        </thead>
-        <tbody class="table-body">
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-          <tr>
-            <td>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="form-check-label" for="checkbox1">XABC</label>
-              </div>
-            </td>
-
-            <td>Git-Synthase</td>
-            <td>E-coli K-12</td>
-            <td>Amidase-S (PF053)</td>
-          </tr>
-        </tbody>
-      </table>
+    
+    <!-- Table for displaying protein data -->
+    <div class="row">
+        <div class="col-md-12 mt-4">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>
+                          <input class="form-check-input" type="checkbox" id="checkbox1" />
+                          ID</th>
+                        <th>Name</th>
+                        <th>Organism</th>
+                        <th>Domains</th>
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for protein in page_obj %}
+                    <tr>
+                        
+                        <td>
+                          <div class="form-check">
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              id="checkbox1"
+                            />
+                            <label class="form-check-label" for="checkbox1">{{ protein.id }}</label>
+                          </div>
+                        </td>
+                        <td>{{ protein.name }}</td>
+                        <td>{{ protein.organism }}</td>
+                        {% comment %} <td>{{ protein.domain }}</td> {% endcomment %}
+                        {% comment %} <td>
+                          <nightingale-sequence
+                          sequence=""
+                          width="300"
+                          height="40"
+                          length="{{ protein.dispEnd }}"
+                          display-start="0"
+                          display-end="{{ protein.dispEnd }}"
+                          highlight="{{ protein.start }} : {{ protein.end }}"
+                          id="my-nightingale-sequence-id"
+                          margin-color="none"
+                          data-toggle="tooltip"
+                          title="pfam-({{ protein.start }}-{{ protein.end }})"
+                      ></nightingale-sequence>
+                      
+                        </td> {% endcomment %}
+                        <td>
+                          <div class="outer-rectangle" style="width: {{ protein.dispEnd }}px; background-color: #B6C4B6;height:40px; border-radius:25px; border:0.8px solid #627254">
+                            
+                            <div class="inner-rectangle" style=" position:relative; width: calc((({{ protein.end }} - {{ protein.start }}) /{{ protein.dispEnd }}) * 100%); height:38px; border-radius:25px; left: calc(({{ protein.start }} / 180) * 100%); background-color: #65B741;"></div>
+                          </div>
+                        </td>
+                    </tr>
+                    <script>
+                      // With the above scripts loaded, you can call `tippy()` with a CSS
+                      // selector and a `content` prop:
+                      tippy('.inner-rectangle', {
+                        content: "{{ protein.domain }}",
+                        placement: 'left',
+                      });
+                    </script>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
+
+    <!-- Pagination -->
+    <div class="row">
+        <div class="col-md-8 lg-10 mt-4">
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    <!-- Previous page button -->
+                    {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page=1" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    {% endif %}
+
+                    <!-- Numbered pages -->
+                    {% for num in page_obj.paginator.page_range %}
+                    {% if num >= page_obj.number and num <= page_obj.number|add:2 %}
+                    <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                    </li>
+                    {% endif %}
+                    {% endfor %}
+
+                    <!-- Next page button -->
+                    {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </nav>
+            
+            
+        </div>
+        <div class="col-md-4 mt-4">
+          <button type="button" class="btn btn-outline-success export-button">Export</button>
+          <button type="button" class="btn btn-outline-success save-button">Save</button>
+        </div>
+        
+    </div>
 </div>
 {% endblock layout-body %}
