--- a/templates/header.html
+++ b/templates/header.html
@@ -19,15 +19,35 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
+    <!-- Bootstrap CSS -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://unpkg.com/tippy.js@6"></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "@nightingale-elements/": "https://cdn.jsdelivr.net/npm/@nightingale-elements/"
+        }
+      }
+    </script>
+    <!-- Import the component -->
+    <script type="module">
+      import "@nightingale-elements/nightingale-sequence@latest";
+    </script>
     
 
   </head>
   <body>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    
     <div class="container-fluid">
       <!-- Bootstrap row for the header -->
       <div class="row custom-header">
@@ -104,6 +124,10 @@
             });
             // $("#newSearchPlace").html($(".dataTables_filter"));
         });
+
+        $(document).ready(function(){
+          $('[data-toggle="tooltip"]').tooltip();
+      });
     </script>
 
     <script
@@ -112,6 +136,8 @@
       crossorigin="anonymous"
     ></script>
     <!-- Bootstrap JavaScript and dependencies (Optional) -->
+    <!-- Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
